feat: Mudança nas responses

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/backend
 spring.datasource.username=postgres
 spring.datasource.password=admin123
 spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
