--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: rinha-backend2:latest
     hostname: api01
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/backend2
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/backend
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=admin123
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
@@ -30,7 +30,7 @@ services:
     <<: *api 
     hostname: api02
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/backend2
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/backend
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=admin123
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
@@ -59,7 +59,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=admin123
       - POSTGRES_USER=postgres
-      - POSTGRES_DB=backend2
+      - POSTGRES_DB=backend
     ports:
       - "5432:5432"
     deploy:
